hide overflow (whould prevent white bar in mobile)

--- a/th/css/style.css
+++ b/th/css/style.css
@@ -5,6 +5,8 @@ body {
 	font-family: 'Helvetica', 'Arial', sans-serif;
 	font-style: normal;
 	font-weight: 400;
+	overflow-x: hidden;
+}
 
 }
 /*---------------------------------------
